--- a/css/style.css
+++ b/css/style.css
@@ -130,3 +130,78 @@
 
 
  /* header koniec*/
+
+ /* logowanie */
+ .formularz{
+    text-align: center;
+    margin: auto;
+    width: 25%;
+    font-size: 18px;
+    /* border: 1px solid black; */
+ }
+ 
+
+ .form-control {
+    display: block;
+    width: 100%;
+    height: calc(2.25rem + 2px);
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+ }
+
+ .form-group{
+    text-align: left;
+ }
+
+ .btn{
+    color: #fff;
+    font-size: 17px;
+    background: #232323;
+    /* display: inline-block;
+    width: min-content;
+    white-space: nowrap; */
+    border: 1px solid transparent;
+    border-radius: 3px;
+    padding: .1rem .5rem;
+    line-height: 1.7;
+    vertical-align: middle;
+    text-transform: uppercase;
+    text-align: right;
+ }
+
+ 
+.btn:hover {
+    color: #fff;
+    cursor: pointer;
+ }
+
+ .loginbutton{
+     text-align: right;
+     padding-right: 20px;
+ }
+
+ .utworz{
+     padding-left: 20px;
+     font-size: 16px;
+     text-align: left;
+     padding-top: 20px;
+ }
+
+ .utworz a{
+     font-weight: 600;
+ }
+
+  /* logowanie koniec*/
+
+  .error {
+    color: red;
+ }
+ 
+ .errors {
+    color: red;
+ }
+ 
