--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,11 @@
     border: none;
     text-decoration: none;
     font-family: 'Montserrat', sans-serif;
+    
  
+ }
+ html{
+    scroll-behavior: smooth;
  }
 
 
@@ -172,6 +176,22 @@
     text-transform: uppercase;
     text-align: right;
  }
+ .btnzobacz{
+   color: #fff;
+   font-size: 22px;
+   background: #232323;
+   /* display: inline-block;
+   width: min-content;
+   white-space: nowrap; */
+   border: 1px solid transparent;
+   border-radius: 3px;
+   padding: 15px;
+   line-height: 1.7;
+   vertical-align: middle;
+   text-transform: uppercase;
+   text-align: right;
+   border-radius: 5px 5px 5px 5px;
+}
 
  
 .btn:hover {
@@ -208,4 +228,152 @@
  .nieznaleziono{
     text-align: center;
  }
+
+
+  /* index */
+
+   /* .indexborder{
+background-color: #232323;
+width: 100%;
+height: 100%;
+ }
+ .indeximage{
+   height: 850px;
+   width: 100%;
+   background-size: cover;
+ }
+  */
+  .indexborder{
+   background-color: #232323;
+   color: white;
+}
+
+.banner-area{
+   width: 100%;
+   height: 100vh;
+    background:linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)), url(car1.jpg);
+    background-size: cover;
+}
+.content-area{
+   height: 180%;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   color: white;
+}
+
+.content{
+   text-align: center;
+}
+
+
+
+  .dalej{
+     background-color: #232323;
+     color: white;
+  }
+
+
+  .index {
+   text-align: center;
+   margin: auto;
+   width: 100%;
+   font-size: 24px;
+   color: white;
+   background-color: #232323;
+}
+
+.index .ramka {
+   text-align: center;
+   margin: auto;
+   width: 100%;
+   height: 500px;
+   background-color: white;
+   border-bottom: 1px solid white;
+   border-top: 1px solid white;
+   box-shadow: var(--box-shadow);
+   background-color: #232323;
+     color: white;
+
+}
+.index .ramka:first-child {
+  padding-top: 50px;
+ margin-bottom: 40px;
+ border-bottom: none;
+}
+/* .index h3{
+   text-align: center;
+   padding-left: 3%;
+   border: 1px solid white;
+   width: 100%;
+   padding: 15px;
+   background-color: white;
+} */
+
+.index .place{
+   text-align: center;
+   padding-left: 3%;
+   border-top: 1px solid white;
+   border-bottom: 1px solid white;
+   width: 100%;
+   /* padding: 15px; */
+   background-color: white;
+   padding-bottom: 20px;
+   box-shadow: var(--box-shadow);
+   
+}
+
+.index .tekst{
+   text-align: left;
+   color: white;
+   font-size: 22px;
+
+}
+.index .column{
+   float: left;
+   width: 54%;
+}
+
+
+.index .imie{
+   font-size: 22px;
+   font-weight: 800;
+   padding-left: 10%;
+   color: white;
+   text-align: left;
+   padding-top: 30px;
+   
+}
+ .index p{
+    padding: 0;
+    margin: 0;
+   font-size: 18px;
+   color: white;
+   text-align: left;
+  
+} 
+.index #cena{
+   padding-top: 9%;
+   font-size: 22px;
+   font-weight: 800;
  
+} 
+
+
+
+
+.index .column .image-resize {
+   height: 400px;
+   width: 86%;
+   border-radius: 1%;
+   box-shadow: var(--box-shadow);
+   border-radius: 1%;
+   overflow: hidden;
+   object-position: center center;
+   object-fit: cover;
+   padding-top: 25px;
+}
+
+
+
+ /* index */
