--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@
     
  
  }
+
+ body{
+    background-color: #2f2f2f;
+ }
  html{
     scroll-behavior: smooth;
  }
@@ -177,8 +181,8 @@
     text-align: left;
  }
 
- .btn{
-    color: #fff;
+ .btnpage{
+    color: black;
     font-size: 17px;
     background: #e7c800;
     /* display: inline-block;
@@ -191,8 +195,11 @@
     vertical-align: middle;
     text-transform: uppercase;
     text-align: right;
-    color: black;
     font-weight: 600;
+ }
+
+ .btnpage:hover{
+   cursor: pointer;
  }
  .btnzobacz{
    color: black;
@@ -228,7 +235,7 @@
    text-align: right;
    border-radius: 5px 5px 5px 5px;
    font-weight: 600;
-   
+   clear: both;
    
   
 }
@@ -271,8 +278,11 @@
     color: red;
  }
 
- .nieznaleziono{
+ .nieznaleziono h1{
     text-align: center;
+    color: white;
+    font-weight: 400;
+    font-size: 26px;
  }
 
 
@@ -367,6 +377,7 @@ height: 100%;
    padding-bottom: 20px;
    box-shadow: var(--box-shadow);
    
+   
 }
 
 .index .tekst{
@@ -432,6 +443,45 @@ height: 100%;
  /* index */
 
  /* oferty */
+ nav.pagination {
+
+   text-align: center;
+}
+
+.pagination ul {
+   display: inline-block;
+   list-style-type: none;
+   margin: 0 0 2em 0;
+   padding: 0;
+}
+
+.pagination ul li {
+   display: inline-block;
+}
+
+.pagination a.active {
+   color: #ffffff;
+   border: 1px solid #295073;
+   background-color: #776700;
+   padding: .1rem .5rem;
+}
+
+.btnpage,
+.btnpage-search {
+   color: #fff;
+   background: #e7c800;
+   display: inline-block;
+   width: min-content;
+   white-space: nowrap;
+   border: 1px solid transparent;
+   border-radius: 5px;
+   padding: .1rem .5rem;
+   line-height: 1.7;
+   vertical-align: middle;
+   text-transform: uppercase;
+
+}
+
 
 
  .oferty {
@@ -475,9 +525,10 @@ height: 100%;
    border-bottom: 1px solid white;
    width: 100%;
    /* padding: 15px; */
-   background-color: white;
+   background-color: #2f2f2f;
    padding-bottom: 20px;
    box-shadow: var(--box-shadow);
+   
    
 }
 
@@ -540,6 +591,334 @@ height: 100%;
 }
 
 
+.form-search input[type=text] {
+   font-size: 18px;
+   padding: .2rem .5rem;
+   line-height: 1.6;
+   vertical-align: bottom;
+   border-right: none;
+   color: white;
+   border-radius: 4px 0 0 4px;
+   width: 20%;
+   background-color: #000000;
+}
+
+.btnpage{
+   color: black;
+}
+
+.oferty .place p{
+   text-align: center;
+   width: 95%;
+}
+
+.oferty .ramka:first-child {
+   border-top: none;
+ }
+
+
+
+
 
 
  /* oferty koniec */
+
+ /* oferta*/
+
+ .oferta {
+   text-align: center;
+   margin: auto;
+   width: 100%;
+   font-size: 24px;
+   color: white;
+   background-color: #2f2f2f;
+   padding-top: 100px;
+   border-top: 2px solid white;
+}
+
+.oferta .ramka {
+   text-align: center;
+   margin: auto;
+   width: 100%;
+   height: 500px;
+   background-color: white;
+   border-bottom: 1px solid white;
+   border-top: 1px solid white;
+   box-shadow: var(--box-shadow);
+   background-color: #2f2f2f;
+     color: white;
+
+}
+
+/* .index h3{
+   text-align: center;
+   padding-left: 3%;
+   border: 1px solid white;
+   width: 100%;
+   padding: 15px;
+   background-color: white;
+} */
+
+.oferta .place{
+   text-align: center;
+   padding-left: 3%;
+   border-top: 1px solid white;
+   border-bottom: 1px solid white;
+   width: 100%;
+   /* padding: 15px; */
+   background-color: #2f2f2f;
+   padding-bottom: 20px;
+   box-shadow: var(--box-shadow);
+   
+   
+}
+
+.oferta .tekst{
+   text-align: left;
+   color: white;
+   font-size: 22px;
+
+}
+.oferta .column{
+   float: left;
+   width: 54%;
+}
+
+
+.oferta .imie{
+   font-size: 22px;
+   font-weight: 800;
+   padding-left: 10%;
+   color: white;
+   text-align: left;
+   padding-top: 30px;
+   
+}
+ .oferta p{
+    
+    
+   font-size: 18px;
+   color: white;
+   text-align: left;
+    float: left; 
+   
+  padding: 10px;
+  width: 30%;
+  
+} 
+.oferta #cena{
+   padding-top: 8%;
+   font-size: 22px;
+   font-weight: 800;
+   color: white;
+   width: 25%;
+ 
+} 
+
+
+
+
+
+.oferta .column .image-resize {
+   height: 400px;
+   width: 86%;
+   border-radius: 1%;
+   box-shadow: var(--box-shadow);
+   border-radius: 1%;
+   overflow: hidden;
+   object-position: center center;
+   object-fit: cover;
+   padding-top: 25px;
+}
+
+ /* oferta koniec*/
+
+
+ /* wypozycz*/
+
+ .wypozycz {
+   text-align: center;
+   margin: auto;
+   width: 100%;
+   font-size: 24px;
+   color: white;
+   background-color: #2f2f2f;
+   padding-top: 100px;
+   /* border-top: 2px solid white; */
+}
+.wypozycz .forms {
+   padding-bottom: 200px;
+   /* border: 3px solid blue; */
+   font-size: 20px;
+   text-align: left;
+}
+
+.wypozycz .ramka {
+   width: 100%;
+   height: 500px;
+   background-color: white;
+   /* border-bottom: 1px solid white;
+   border-top: 1px solid white; */
+   box-shadow: var(--box-shadow);
+   background-color: #2f2f2f;
+     color: white;
+     /* border: 3px solid green; */
+   
+     
+
+}
+.wypozycz .ramka .btnpotw{
+   text-align: center;
+}
+
+
+/* .index h3{
+   text-align: center;
+   padding-left: 3%;
+   border: 1px solid white;
+   width: 100%;
+   padding: 15px;
+   background-color: white;
+} */
+
+.wypozycz .place{
+   text-align: center;
+   padding-left: 3%;
+   /* border-top: 1px solid white;
+   border-bottom: 1px solid white; */
+   width: 100%;
+   /* padding: 15px; */
+   background-color: #2f2f2f;
+   padding-bottom: 20px;
+   box-shadow: var(--box-shadow);
+   
+   
+}
+
+.wypozycz .tekst{
+   text-align: center;
+   color: white;
+   font-size: 22px;
+   /* border: 3px solid red; */
+   width: 55%;
+   float: left;
+
+}
+.wypozycz .tekst1{
+   text-align: center;
+   color: white;
+   font-size: 22px;
+   /* border: 3px solid red; */
+   width: 55%;
+   float: left;
+
+}
+
+
+
+.wypozycz .forms #start{
+   width: 12%;
+   font-size: 20px;
+   border-radius: 5px 5px 5px 5px;
+   background-color: #e7c800;
+   color: black;
+   
+}
+
+
+
+
+
+
+.wypozycz .imie{
+   font-size: 22px;
+   font-weight: 800;
+   color: white;
+   text-align: center;
+   /* border: 1px solid white; */
+   padding-bottom: 10px;
+   padding-top: 20px;
+   
+}
+ .wypozycz p{
+   font-size: 18px;
+   color: white;
+   text-align: left;
+  /* border: 1px solid white; */
+  padding-bottom: 10px;
+  padding-left: 50%;
+  
+} 
+.wypozycz #cena{
+   font-size: 22px;
+   font-weight: 800;
+   color: white;
+   text-align: center;
+   /* border:3px solid purple; */
+   text-align: right;
+   padding-top: 60px;
+ 
+} 
+
+.wypozycz .column{
+   text-align: center;
+   padding-left: auto;
+   padding-right: auto;
+   /* border: 2px solid white; */
+   border-top: 1px solid white;
+   border-bottom: 1px solid white;
+   width: 100%;
+   padding-bottom: 20px;
+   
+}
+
+
+
+.wypozycz .column .image-resize {
+   height: 200px;
+   width: 25%;
+   border-radius: 1%;
+   box-shadow: var(--box-shadow);
+   border-radius: 1%;
+   overflow: hidden;
+   object-position: center center;
+   object-fit: cover;
+   padding-top: 25px;
+
+}
+
+
+.btnpotw{
+   color: black;
+   font-size: 22px;
+   background: #e7c800;;
+   /* display: inline-block;
+   width: min-content;
+   white-space: nowrap; */
+   border: 1px solid transparent;
+   border-radius: 3px;
+   padding: 10px;
+   line-height: 1.7;
+   
+   text-transform: uppercase;
+   text-align: center;
+   border-radius: 5px 5px 5px 5px;
+   font-weight: 600;
+   text-align: center;
+   
+  
+}
+.wypozycz .form-con {
+   padding: 3px;
+   width: 12%;
+   font-size: 18px;
+   background-clip: padding-box;
+   box-shadow: 3px 3px 7px rgb(39, 39, 39);
+   background-color: #000000;
+   color: white;
+   border-radius: 5px 5px 5px 5px;
+   background-color: #e7c800;
+   color: black;
+}
+
+ /* wypozycz koniec*/
