--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,16 @@
     scroll-behavior: smooth;
  }
 
+ footer {
+   font-size: 0.8rem;
+   text-align: right;
+   color: white;
+   padding: 10px;
+}
+footer a{
+   color: #e7c800;
+}
+
 
 .header {
     width: 100%;
@@ -240,6 +250,25 @@
    
   
 }
+.btndodaj{
+   color: black;
+   font-size: 18px;
+   background: #e7c800;;
+   /* display: inline-block;
+   width: min-content;
+   white-space: nowrap; */
+   border: 1px solid transparent;
+   border-radius: 3px;
+   padding: 5px;
+   line-height: 1.7;
+   
+   text-transform: uppercase;
+   text-align: right;
+   border-radius: 5px 5px 5px 5px;
+   font-weight: 600;
+   
+  
+}
 
  
 .btn:hover {
@@ -353,7 +382,7 @@ height: 100%;
      color: white;
 
 }
-.przerwa{
+.przerwaa{
    text-align: left;
    padding: 25px;
 }
@@ -533,6 +562,20 @@ height: 100%;
    background-color: #2f2f2f;
    padding-bottom: 20px;
    box-shadow: var(--box-shadow);
+   
+   
+}
+.oferty .adminplace{
+   text-align: center;
+   padding-left: 3%;
+   border-top: 1px solid white;
+   border-bottom: 1px solid white;
+   width: 100%;
+   /* padding: 15px; */
+   background-color: #2f2f2f;
+   padding-bottom: 20px;
+   box-shadow: var(--box-shadow);
+
    
    
 }
@@ -993,3 +1036,80 @@ height: 100%;
 
 }
   /* moje konto koniec*/
+  /* klienci */
+
+  .klienci{
+   padding-top: 120px;
+   text-align: center;
+   color: white;
+   font-size: 20px;
+   border-bottom: 1px solid white;
+}
+.klienci p{
+   padding: 10px;
+}
+
+.klienci .tekst1{
+   float: left;
+
+   height: 150px;
+   width: 55%;
+   padding-left: 15%;
+}
+/* .klienci .tekst2{
+
+} */
+.klienci .calytekst{
+
+   width: 60%;
+   margin-left: auto ;
+   margin-right: auto;
+   color: white;
+}
+
+.klienci .ramka{
+
+   width: 100%;
+   margin-left: auto;
+   margin-right: auto;
+
+   text-align: left;
+}
+.klienci .rama{
+   border-top: 1px solid white;
+   border-bottom: 1px solid white;
+}
+
+.klienci .imie{
+   font-weight: 600;
+   font-size: 24px;
+   padding-left: 26%;
+   color: #e7c800;
+
+}
+
+
+  /* klienci koniec */
+  /* kontakt  */
+
+.box{
+   padding-top: 120px;
+   border-bottom: 1px solid white;
+   color: white;
+   padding-bottom: 3%;
+}
+.box .ramka{
+   padding-left: 40%;
+}
+.box h1{
+   font-size: 24px;
+   padding: 5px;
+}
+.box p{
+   font-size: 18px;
+   padding-left: 2%;
+   padding: 5px;
+   
+}
+
+  /* kontakt koniec */
