--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,8 @@
    text-align: right;
    color: white;
    padding: 10px;
+   clear: both;
+   padding-top: 50px;
 }
 footer a{
    color: #e7c800;
@@ -164,7 +166,6 @@ footer a{
     margin: auto;
     width: 25%;
     font-size: 18px;
-    /* border: 1px solid black; */
  }
 
  .formularz .ramka h1{
@@ -172,6 +173,32 @@ footer a{
     text-shadow: 0 0 5px black;
     font-weight: 400;
  }
+
+ .edytuj{
+   text-align: center;
+   padding-left: auto;
+   padding-right: auto;
+   /* border: 2px solid white; */
+   border-top: 1px solid white;
+   border-bottom: 1px solid white;
+   width: 40%;
+   height: 200px;
+   padding-bottom: 20px;
+   
+ }
+ 
+.edytuj .image-edytuj{
+   height: 400px;
+   width: 100%;
+   border-radius: 1%;
+   box-shadow: var(--box-shadow);
+   border-radius: 1%;
+   overflow: hidden;
+   object-position: center center;
+   object-fit: cover;
+   padding-top: 25px;
+;
+}
  
 
  .form-control {
@@ -247,9 +274,55 @@ footer a{
    border-radius: 5px 5px 5px 5px;
    font-weight: 600;
    clear: both;
+   width: 6%;
    
   
 }
+.btnusun{
+   color: black;
+   font-size: 22px;
+   background: #e7c800;;
+   /* display: inline-block;
+   width: min-content;
+   white-space: nowrap; */
+   border: 1px solid transparent;
+   border-radius: 3px;
+   padding: 10px;
+   line-height: 1.7;
+   
+   text-transform: uppercase;
+   text-align: right;
+   border-radius: 5px 5px 5px 5px;
+   font-weight: 600;
+   clear: both;
+   padding-left: 43px;
+   padding-right: 43px;
+   
+  
+}
+.btnedytuj{
+   color: black;
+   font-size: 22px;
+   background: #e7c800;;
+   /* display: inline-block;
+   width: min-content;
+   white-space: nowrap; */
+   border: 1px solid transparent;
+   border-radius: 3px;
+   padding: 10px;
+   line-height: 1.7;
+   
+   text-transform: uppercase;
+   text-align: right;
+   border-radius: 5px 5px 5px 5px;
+   font-weight: 600;
+   clear: both;
+   padding-left: 31px;
+   padding-right: 31px;
+   
+  
+}
+
 .btndodaj{
    color: black;
    font-size: 18px;
@@ -618,7 +691,7 @@ height: 100%;
    font-size: 22px;
    font-weight: 800;
    color: white;
-   width: 25%;
+   width: 30%;
  
 } 
 
@@ -725,11 +798,12 @@ height: 100%;
    text-align: left;
    color: white;
    font-size: 22px;
-
+  
 }
 .oferta .column{
    float: left;
    width: 54%;
+
 }
 
 
@@ -803,7 +877,7 @@ height: 100%;
 
 .wypozycz .ramka {
    width: 100%;
-   height: 500px;
+   height: 250px;
    background-color: white;
    /* border-bottom: 1px solid white;
    border-top: 1px solid white; */
@@ -1113,3 +1187,5 @@ height: 100%;
 }
 
   /* kontakt koniec */
+
+
